# glmark2-ohos

./: .gitmodules  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/libs/arm64-v8a_no-opt/: libEGL.so.1  libGLdispatch.so.0
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets
